# DataAcquisitonHZDR

./: CMakeLists.txt  README.md  main.cpp
Base/: BaseProcess.h
DataStructures/: Config.h  Events.h  RingBuffer.h  TS_Queue.h  notification_queue.h
Engine/: ChannelData.h  CommandInterface.h  DataEngine.h  LTTEngine.h  Tasks.h  core.h  states.h
Examples/: Tomography_Controlled_Continuous_Steel_Casting.h  tasler_config.json
IOs/Console/: UI.h
IOs/Files/: Logger.h
IOs/LTT24/: ltt24_consts.h  ltt24_whisperer.h
IOs/TCP_IP/: API.h  Server.h  TCPServer.h
Libraries/LTT_API/: CMakeLists.txt  ltt2api.h  ltt2api_emulation.h  ltt2api_export.h  lttosal.h  lttosal_conv.h  lttosal_export.h  lttosal_time.h  lttosal_types.h
Libraries/LTT_API/samples/: sample_blocked_ltt24.c  sample_nonblocked_ltt24.cpp
Libraries/Numerical_Magic/: Numerical_magic.h
Models/: Coils.h  spline.h
Models/DspFilters/: Bessel.h  Biquad.h  Butterworth.h  Cascade.h  ChebyshevI.h  ChebyshevII.h  Common.h  Elliptic.h  Filter.h  Legendre.h  Params.h  PoleFilter.h  RBJ.h  RootFinder.h
Thread_Pool/: Tasking_system.h
Tools/: Filter_factory.h  Parser.h  Timer.h  custom_algorithms.h
